# observe

./: CONTRIBUTING.md  CUSTOM_SPANS.md  GETTING-STARTED.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml  unit-test.sh
.github/: CODEOWNERS
.github/workflows/: build-wheels-manual.yaml  conventional_commits.yml  dependency.yml  linter_and_formatter.yaml  pre-commit.yaml  release.yaml  reusable-python-build-wheel.yaml  stale.yml
deploy/: docker-compose.yaml
examples/: README.md  agent.py  langgraph_multi_agent.py  live_topology_listener.py  llama-index-example.py  llama-index-multi-agent-example.py  parallel_agents_tools.py  pyproject.toml  requirements.txt  test.py
examples/a2a_examples/: README.md  agent_executor.py  client.py  hello_world_client.py  hello_world_server.py  pyproject.toml
examples/a2a_examples/src/a2a_examples/: client.py  server.py  slima2a_client.py  slima2a_server.py
examples/a2a_random_number_generator/: agent_executor.py  client.py  server.py
examples/mcp/: .env.example  README.md  client.py  client_native.py  server.py
examples/remote_agent_http/: .gitignore  README.md  requirements.txt
examples/remote_agent_http/app/: main.py
examples/remote_agent_http/app/agent/: lg.py
examples/remote_agent_http/client/: client.py
examples/remote_agent_nats/: Makefile  README.md  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml
examples/remote_agent_nats/app/: server.py
examples/remote_agent_nats/app/agent/: graph.py
examples/remote_agent_nats/client/: client_agent.py
examples/remote_agent_slim/: .gitignore  README.md  client.py  common.py  demo_multi_instance_problem.py  docker-compose.yml  exec_client.sh  exec_server.sh  requirements.txt  server.py  slim-server.py  update_req.py
examples/remote_agent_slim/app/: main.py
examples/remote_agent_slim/app/agent/: lg.py  prompts.py
examples/remote_agent_slim/app/core/: logging_config.py
examples/remote_agent_slim/client/: Dockerfile  slim.py
examples/remote_agent_slim/gw/config/base/: server-config.yaml
ioa_observe/sdk/: __init__.py  instruments.py  telemetry.py  version.py
schema/: README.md  agntcy_observability_data_schema.json
tests/: conftest.py  test_client.py  test_instrumentor.py  test_manual_instrumentation.py  test_semantic_conventions.py  test_transform_span.py  test_version.py
tests/cassettes/: test_manual_report.yaml  (+1 more)
(+30 files in other folders)
